# OpenCAEPoroX

./: .gitignore  AcceleratePEC_8hpp.html  AcceleratePEC_8hpp__dep__incl.map  AcceleratePEC_8hpp__dep__incl.md5  AcceleratePEC_8hpp__incl.map  AcceleratePEC_8hpp__incl.md5  AcceleratePEC_8hpp_source.html  AllWells_8hpp.html  AllWells_8hpp__dep__incl.map  AllWells_8hpp__dep__incl.md5  AllWells_8hpp__incl.map  AllWells_8hpp__incl.md5  AllWells_8hpp_source.html  BoundaryFlow_8hpp.html  BoundaryFlow_8hpp__dep__incl.map  BoundaryFlow_8hpp__dep__incl.md5  BoundaryFlow_8hpp__incl.map  BoundaryFlow_8hpp__incl.md5  BoundaryFlow_8hpp_source.html  BulkAccumuModule_8hpp.html  BulkAccumuModule_8hpp__dep__incl.map  BulkAccumuModule_8hpp__dep__incl.md5  BulkAccumuModule_8hpp__incl.map  BulkAccumuModule_8hpp__incl.md5  BulkAccumuModule_8hpp_source.html  BulkConnTrans_8hpp.html  BulkConnTrans_8hpp__dep__incl.map  BulkConnTrans_8hpp__dep__incl.md5  BulkConnTrans_8hpp__incl.map  BulkConnTrans_8hpp__incl.md5  BulkConnTrans_8hpp_source.html  BulkConnVarSet_8hpp.html  BulkConnVarSet_8hpp__dep__incl.map  BulkConnVarSet_8hpp__dep__incl.md5  BulkConnVarSet_8hpp__incl.map  BulkConnVarSet_8hpp__incl.md5  BulkConnVarSet_8hpp_source.html  BulkConn_8hpp.html  BulkConn_8hpp__dep__incl.map  BulkConn_8hpp__dep__incl.md5  (+1646 more)
.github/workflows/: gh-page.yml
ai/: .gitignore  README.md  createdoc.sh  post_process.sh
ai/bad/: BulkVarSet.hpp  OCPFlowMethod.hpp  OCPFuncPVT.hpp  OCPFuncSAT.hpp  OCPMixtureMethodK.hpp  OCPMixtureVarSet.hpp  OCPOutput.hpp  ParamReservoir.hpp  ParamWell.hpp  WellPeaceman.hpp
ai/good/: BulkAccumuModule.hpp  BulkConnTrans.hpp  DenseMat.hpp  FaspSolver.hpp  LinearSolver.hpp  MixtureUnit.hpp  OCPConst.hpp  OCPControlFast.hpp  OCPControlTime.hpp  OCPMiscible.hpp  OCPMixtureMethodComp.hpp  OCPNRresidual.hpp  OCPPhaseEquilibrium.hpp  OCPScalePcow.hpp  OCPTimeRecord.hpp  PVTModule.hpp  ParamRead.hpp  PetscSolver.hpp  PreParamGridWell.hpp  PreProcess.hpp  ROCKModule.hpp  Reservoir.hpp  UtilMesh.hpp
ai/prompts/: chinese.txt
config/: CMakeLists.txt  config.hpp  defaults.cmake
config/cmake/: tpl_config.hpp.in
config/cmake/modules/: FindAS.cmake  (+8 more)
data/SPE1a-HiSim/: SUMMARY.out_bak
data/SPE9-HiSim/: SPE9.RSM
data/cornerpoint/: CP.data  CPtmp.data
data/spe10/: bsr.fasp  spe10.data
data/spe1a/: SUMMARY.out_ocp  bsr.fasp  spe1a.data
data/spe3/: EGOIL.in  spe3.data
data/spe5/: grid.tmpinfo  spe11a.msh  spe5.data  test.geo  test.msh
data/spe5million/: SPE5C400x400X6ECL-CO2.DATA
data/spe6/: spe6.data
data/spe9/: grid.tmpinfo  spe9_FIM.data  spe9_IMPEC.data
docs/: Doxyfile  mainpage.dox
docs/ai/: README.md
docs/doxygen/: footer.tex  header.tex
docs/include/: AllWells.hpp  CornerGrid.hpp  HeatConduct.hpp  IsothermalSolver.hpp  OCPControlMethod.hpp  OCPFlow.hpp  OCPFlowMethod.hpp  OCPFlux.hpp  OCPFuncPVT.hpp  OCPFuncSAT.hpp  OCPFuncTable.hpp  OCPMatrix.hpp  OCPMixtureMethodK.hpp  OCPNRsuite.hpp  OCPRock.hpp  OCPTable.hpp  OCPUnits.hpp  OptionalModules.hpp  Output4Vtk.hpp  PardisoSolver.hpp  Partition.hpp  SATModule.hpp  ThermalMethod.hpp  UtilMath.hpp  UtilOutput.hpp  Well.hpp  WellOpt.hpp  WellPeaceman.hpp  WellPerf.hpp
docs/src/: AcceleratePEC.cpp  BoundaryFlow.cpp  BulkConn.cpp  BulkConnTrans.cpp  BulkInitializer.cpp  CMakeLists.txt  Decoupling.cpp  DenseMat.cpp  Domain.cpp  FaspSolver.cpp  HeatLoss.cpp  IsothermalSolver.cpp  LinearSystem.cpp  MixtureUnit.cpp  OCPBoundary.cpp  OCPControlMethod.cpp  OCPControlNR.cpp  OCPControlTime.cpp  OCPMiscible.cpp  OCPMixture.cpp  OCPMixtureMethodComp.cpp  OCPMixtureMethodK.cpp  OCPSurfaceTension.cpp  OCPTimeRecord.cpp  OCPUnits.cpp  ParamOutput.cpp  ParamReservoir.cpp  Solver.cpp  ThermalSolver.cpp  UtilInput.cpp  UtilMath.cpp  Well.cpp  WellPeaceman.cpp
enc_temp_folder/a5d9d53a7563d5ba282bfa927851f1b2/: GmshGrid.hpp
include/: AcceleratePEC.hpp  AcceleratePVT.hpp  AllWells.hpp  BOUNDARYModule.hpp  BoundaryCondition.hpp  BoundaryFlow.hpp  Bulk.hpp  BulkAccumuModule.hpp  BulkConn.hpp  BulkConnArea.hpp  BulkConnFunc.hpp  BulkConnOptionalModules.hpp  BulkConnTrans.hpp  BulkConnVarSet.hpp  BulkInitializer.hpp  BulkOptionalModules.hpp  BulkVarSet.hpp  CMakeLists.txt  CornerGrid.hpp  DenseMat.hpp  Domain.hpp  FLUXModule.hpp  FaspSolver.hpp  FaspxxSolver.hpp  FlowUnit.hpp  FluxUnit.hpp  GmshGrid.hpp  HeatConduct.hpp  HeatLoss.hpp  IsoThermalMethod.hpp  IsoThermalSolver.hpp  IsothermalSolver.hpp  LinearSolver.hpp  LinearSystem.hpp  Mixture.hpp  MixtureBO.hpp  MixtureComp.hpp  MixtureThermal.hpp  MixtureUnit.hpp  MixtureUnitBlkOil.hpp  (+92 more)
main/: CMakeLists.txt  Main.cpp
modules/: FindMETIS.cmake  FindMKL.cmake  FindPARMETIS.cmake  FindPETSC.cmake  OptionalAS.cmake  OptionalBOOST.cmake  OptionalFASP.cmake  OptionalMETIS.cmake  OptionalPARMETIS.cmake  OptionalPETSC.cmake  OptionalPETSCSOLVER.cmake  OptionalSAMGP.cmake  OptionalSAMGPINTERFACE.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.html  (+132 more)
src/: AcceleratePEC.cpp  AcceleratePVT.cpp  AllWells.cpp  BoundaryFlow.cpp  Bulk.cpp  BulkAccumuModule.cpp  BulkConn.cpp  BulkConnArea.cpp  BulkConnFunc.cpp  BulkConnTrans.cpp  BulkInitializer.cpp  CMakeLists.txt  CornerGrid.cpp  Decoupling.cpp  DenseMat.cpp  Domain.cpp  FaspSolver.cpp  FaspxxSolver.cpp  FlowUnit.cpp  GmshGrid.cpp  HeatConduct.cpp  HeatLoss.cpp  IsoThermalMethod.cpp  IsoThermalSolver.cpp  IsothermalSolver.cpp  LinearSystem.cpp  MixtureBO.cpp  MixtureBO2_OW.cpp  MixtureBO3_ODGW.cpp  MixtureComp.cpp  MixtureThermal_k.cpp  MixtureUnit.cpp  MixtureUnitBlkOil.cpp  MixtureUnitComp.cpp  MixtureUnitThermal.cpp  OCP.cpp  OCP3PhaseFlow.cpp  OCPControl.cpp  OCPControlMethod.cpp  OCPControlNR.cpp  (+73 more)
vs/: OpenCAEPoroX.sln  OpenCAEPoroX.vcxproj
(+95 files in other folders)
